frontend/src/index.css
body {
  margin: 0;
  padding: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
}

ul {
  padding-left: 0;
}

li {
  list-style-type: none;
}

.createPost {
  margin: 10px;
}

.postControl {
  display: flex;
}

.postForm {
  display: flex;
  align-items: center;
  flex-direction: column;
}

.postForm button {
  margin: 20px;
  font-size: 17px;
}

.categorySelect {
  padding-left: 10px;
  font-size: 17px;
  border: 1px solid #bdbdbd;
  border-radius: 10px;
}

.modalButtons {
  display: flex;
  align-items: center;
}

.modalButtons button {
  margin-left: 10px;
}

.commentBox button {
  font-size: 16px;
  margin-top: 20px;
}

.commentsTop {
  display: flex;
  align-items: flex-start;
  flex-direction: column;
  margin: 20px;
  margin-left: 30px;
}

.commentsTop button {
  border: none;
  color: #2a359d;
  font-size: 14px;
}

.comments {
  width: 80%;
}

textarea {
  font-size: 17px;
  border-radius: 5px;
  padding: 5px;
  padding-left: 8px;
}

.post {
  display: flex;
  text-align: left;
  padding: 20px;
  font-size: 1em;
  border: 1px solid #bdbdbd;
  outline: none;
}

.comment {
  display: flex;
  text-align: left;
  padding: 20px;
  font-size: 1em;
  border: 1px solid #bdbdbd;
  border-radius: 10px;
  outline: none;
}

.comment .content {
  display: inline-flex;
  flex-direction: column;
  padding-left: 20px;
}

.comment .content button {
  text-align: left;
  border: none;
  background: none;
  color: #2a359d;
  margin-top: 10px;
}

.comment button {
  margin: 3px;
  max-width: 70px;
}


.post .content {
  display: inline-flex;
  flex-direction: column;
  padding-left: 20px;
}

.post .content button {
  text-align: left;
  border: none;
  background: none;
  color: #2a359d;
  margin-top: 10px;
}

.post button {
  margin: 3px;
  max-width: 70px;
}

.vote {
  display: inline-flex;
  flex-direction: column;
  text-align: center;
}

.subtitle {
  font-size: 80%;
}

.container {
  margin: 0 auto;
  max-width: 1070px;
  padding: 20px;
  min-width: 1070px;
}

.header {
  font-size: 50px;
  font-weight: 300;
  margin: 10px 0;
}

.subheader {
  font-size: 30px;
  font-weight: 300;
}

.icon-btn {
  background: none;
  border: none;
}

.nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
}


.calendar {
  margin-top: 0;
  display: flex;
}

.icon-grid ul {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.icon-grid {
  flex: 1;
}

.meal-types {
  display: flex;
  justify-content: space-around;
  margin: 0;
  margin-left: 152px;
}

.meal {
  font-size: 23px;
  display: flex;
  flex-direction: column;
  height: 150px;
  width: 100px;
  justify-content: center;
}

.meal svg {
  margin: 0 auto;
  display: block;
  margin-top: 15px;
  cursor: pointer;
}

.overlay {
  position: fixed;
  top: 0px;
  left: 0px;
  right: 0px;
  bottom: 0px;
  background-color: rgba(255, 255, 255, 0.75);
}

.modal {
  position: absolute;
  top: 40px;
  left: 30%;
  right: 50%;
  bottom: 250px;
  border: 1px solid rgb(204, 204, 204);
  background: rgb(255, 255, 255);
  overflow: auto;
  border-radius: 4px;
  outline: none;
  padding: 20px;
  border-radius: 3px;
  box-shadow: 0 3px 8px 0 rgba(0,0,0,.24), 0 3px 12px 0 rgba(0,0,0,.12);
  min-width: 500px;
}

